fix truncated texts in the profile view

--- a/app/client/ui/profile.scss
+++ b/app/client/ui/profile.scss
@@ -63,6 +63,7 @@
       pointer-events: none;
       resize: none;
       font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+      width: 100%;
     }
 
     textarea {
